[project]
name = "gif-generator"
version = "0.1.0"
description = "AI-powered GIF generator from YouTube videos and uploads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "google-genai",
    "moviepy==1.0.3",
    "pillow==9.5.0",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "aiofiles",
    "cors==1.0.1",
    "imageio==2.31.1",
    "imageio-ffmpeg==0.4.8",
    "yt-dlp"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
